force-app/main/default/objects/Send_Service_Agreement__c/Send_Service_Agreement__c.object-meta.xml
<CustomObject>
    <label>Send Service Agreement</label>
    <nameField>
        <label>Send Service Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Send Service Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>