force-app/main/default/objects/Send_Service_Agreement__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(
	ISPICKVAL( App__c, &quot;HOME&quot;),
	Client__r.enrtcr__Other_Address__c,
	IF(ISPICKVAL(App__c, &quot;In-Clinic&quot;),  
		Client__r.enrtcr__Site__r.enrtcr__Business_Address_1__c + &quot; &quot; +
		Client__r.enrtcr__Site__r.enrtcr__Business_Address_2__c + &quot; &quot; +
		Client__r.enrtcr__Site__r.enrtcr__Mailing_Suburb__c + &quot; &quot; +
		Client__r.enrtcr__Site__r.enrtcr__Mailing_State__c + &quot; &quot; +
		Client__r.enrtcr__Site__r.enrtcr__Mailing_Postcode__c,
		&quot;&quot;
	)
)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>