force-app/main/default/objects/Send_Service_Agreement__c/fields/AHA_Level_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>AHA_Level_2_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AHA Level 2 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>