force-app/main/default/objects/Send_Service_Agreement__c/fields/App__c.field-meta.xml
<CustomField>
    <fullName>App__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>In-Clinic</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>