force-app/main/default/objects/Send_Service_Agreement__c/fields/Behavioral_Support_Hours__c.field-meta.xml
<CustomField>
    <fullName>Behavioral_Support_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Behavioral Support Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>