force-app/main/default/objects/Send_Service_Agreement__c/fields/Birthday_Text__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Text__c</fullName>
    <formula>text(DAY( Client__r.Birthdate)) +&apos;/&apos;+  text(MONTH( Client__r.Birthdate )) +&apos;/&apos;+ text(YEAR( Client__r.Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday Text</label>
    <type>Text</type>
</CustomField>