force-app/main/default/objects/Send_Service_Agreement__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter the client you want to send the contract to</inlineHelpText>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Send Service Agreements</relationshipLabel>
    <relationshipName>Send_Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>