force-app/main/default/objects/Send_Service_Agreement__c/fields/Clinician__c.field-meta.xml
<CustomField>
    <fullName>Clinician__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Clinician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Send Service Agreements (Clinician)</relationshipLabel>
    <relationshipName>Send_Service_Agreements1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>