force-app/main/default/objects/Send_Service_Agreement__c/fields/Description_of_Support__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Support__c</fullName>
    <label>Description of Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Intervention</fullName>
            </value>
            <value>
                <fullName>Care Coordination</fullName>
            </value>
            <value>
                <fullName>Notes and Documentation</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Preparation of Resources</fullName>
            </value>
            <value>
                <fullName>Travel: minimum of 15minutes and capped at 30minutes (60mins for rural travel) each way</fullName>
            </value>
            <value>
                <fullName>Full Travel (Regional Support)</fullName>
                <isActive>false</isActive>
                <label>Full Travel (Regional Support)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>