force-app/main/default/objects/Send_Service_Agreement__c/fields/DocuSign_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Status</label>
    <referenceTo>dfsle__EnvelopeStatus__c</referenceTo>
    <relationshipLabel>Send Service Agreements</relationshipLabel>
    <relationshipName>Send_Service_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>