force-app/main/default/objects/Send_Service_Agreement__c/fields/End_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Text__c</fullName>
    <formula>text(DAY( Client__r.NDIS_Plan_End_Date__c)) +&apos;/&apos;+  text(MONTH( Client__r.NDIS_Plan_End_Date__c)) +&apos;/&apos;+ text(YEAR( Client__r.NDIS_Plan_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Text</label>
    <type>Text</type>
</CustomField>