force-app/main/default/objects/Send_Service_Agreement__c/fields/Exercise_Physiology__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Physiology__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Exercise Physiology Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>