force-app/main/default/objects/Send_Service_Agreement__c/fields/Funding_Category__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category__c</fullName>
    <label>Funding Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improved Daily Living</fullName>
            </value>
            <value>
                <fullName>Improved Health and Wellbeing</fullName>
            </value>
            <value>
                <fullName>Improved Relationships</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>