force-app/main/default/objects/Send_Service_Agreement__c/fields/Funding_Category_Text__c.field-meta.xml
<CustomField>
    <fullName>Funding_Category_Text__c</fullName>
    <formula>IF ( INCLUDES ( Funding_Category__c , &quot;Improved Daily Living&quot; ), &quot;Improved Daily Living&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Funding_Category__c , &quot;Improved Health and Wellbeing&quot; ), &quot;Improved Health and Wellbeing&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Funding_Category__c , &quot;Improved Relationships&quot; ), &quot;Improved Relationships&quot;,null )</formula>
    <label>Funding Category Text</label>
    <type>Text</type>
</CustomField>