force-app/main/default/objects/Send_Service_Agreement__c/fields/IsAmendment__c.field-meta.xml
<CustomField>
    <fullName>IsAmendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAmendment?</label>
    <type>Checkbox</type>
</CustomField>