force-app/main/default/objects/Send_Service_Agreement__c/fields/Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Location_Text__c</fullName>
    <formula>TEXT(App__c)</formula>
    <label>Location Text</label>
    <type>Text</type>
</CustomField>