force-app/main/default/objects/Send_Service_Agreement__c/fields/Office_Manager__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager__c</fullName>
    <formula>Client__r.enrtcr__Site__r.Office_Admin__r.Email</formula>
    <label>Office Manager</label>
    <type>Text</type>
</CustomField>