force-app/main/default/objects/Send_Service_Agreement__c/fields/OT_hours__c.field-meta.xml
<CustomField>
    <fullName>OT_hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Occupational Therapy Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>