force-app/main/default/objects/Send_Service_Agreement__c/fields/Other_Therapy_Hours__c.field-meta.xml
<CustomField>
    <fullName>Other_Therapy_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Therapy Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>