force-app/main/default/objects/Send_Service_Agreement__c/fields/Payment_Information_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Information_Text__c</fullName>
    <formula>TEXT(Client__r.How_is_the_NDIS_Plan_funding_managed__c)</formula>
    <label>Payment Information Text</label>
    <type>Text</type>
</CustomField>