force-app/main/default/objects/Send_Service_Agreement__c/fields/Service_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Agreement Signed?</label>
    <type>Checkbox</type>
</CustomField>