force-app/main/default/objects/Send_Service_Agreement__c/fields/Speech_Pathology_Hours__c.field-meta.xml
<CustomField>
    <fullName>Speech_Pathology_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Speech Pathology Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>