force-app/main/default/objects/Send_Service_Agreement__c/fields/Start_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Text__c</fullName>
    <formula>text(DAY(  Client__r.NDIS_Plan_Start_Date__c )) +&apos;/&apos;+  text(MONTH( Client__r.NDIS_Plan_Start_Date__c)) +&apos;/&apos;+ text(YEAR( Client__r.NDIS_Plan_Start_Date__c))</formula>
    <label>Start_Date_Text</label>
    <type>Text</type>
</CustomField>