force-app/main/default/objects/Send_Service_Agreement__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>text(Client__r.enrtcr__Client_Region__c)</formula>
    <label>State</label>
    <type>Text</type>
</CustomField>