force-app/main/default/objects/Send_Service_Agreement__c/fields/Therapy_Support__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Support__c</fullName>
    <label>Therapy Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupational Therapy</fullName>
                <label>Occupational Therapy $193.99</label>
            </value>
            <value>
                <fullName>Speech Pathology</fullName>
                <label>Speech Pathology $193.99</label>
            </value>
            <value>
                <fullName>Physiotherapy</fullName>
                <label>Physiotherapy $193.99</label>
            </value>
            <value>
                <fullName>Exercise Physiology</fullName>
                <label>Exercise Physiology $166.99</label>
            </value>
            <value>
                <fullName>Behavioral Support Standard</fullName>
                <label>Behavioral Support Standard $193.99</label>
            </value>
            <value>
                <fullName>Behavioral Support Specialist</fullName>
                <label>Behavioral Support Specialist $214.41</label>
            </value>
            <value>
                <fullName>Psychology</fullName>
                <label>Psychology $214.41</label>
            </value>
            <value>
                <fullName>Allied Health Assistant Level 1</fullName>
                <label>Allied Health Assistant Level 1 $56.16</label>
            </value>
            <value>
                <fullName>Allied Health Assistant Level 2</fullName>
                <label>Allied Health Assistant Level 2 $86.79</label>
            </value>
            <value>
                <fullName>Other Therapy $193.99</fullName>
            </value>
            <value>
                <fullName>Behavioral Support Specialist WA</fullName>
                <isActive>false</isActive>
                <label>Behavioral Support Specialist $234.83</label>
            </value>
            <value>
                <fullName>Physiotherapy WA</fullName>
                <isActive>false</isActive>
                <label>Physiotherapy $224.62</label>
            </value>
            <value>
                <fullName>Psychology WA</fullName>
                <isActive>false</isActive>
                <label>Psychology $234.83</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>