force-app/main/default/objects/Send_Service_Agreement__c/fields/Therapy_Support_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Support_Formatted__c</fullName>
    <label>Therapy Support Formatted</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>