force-app/main/default/objects/Send_Service_Agreement__c/fields/Therapy_Support_Text__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Support_Text__c</fullName>
    <formula>IF (  OR(State__c = &quot;WA&quot;, State__c = &quot;SA&quot;, State__c = &quot;TAS&quot;) ,

(IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Occupational Therapy $193.99&quot; ), &quot;Occupational Therapy&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Speech Pathology $193.99&quot; ), &quot;Speech Pathology&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Physiotherapy $224.62&quot; ), &quot;Physiotherapy&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Exercise Physiology $166.99&quot; ), &quot;Exercise Physiology&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Behavioral Support Standard $193.99&quot; ), &quot;Behavioral Support Standard&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Behavioral Support Specialist $234.83&quot; ), &quot;Behavioral Support Specialist&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Psychology $234.83&quot; ), &quot;Psychology&quot; &amp; &quot;,&quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Allied Health Assistant Level 1 $56.16&quot; ), &quot;Allied Health Assistant Level 1&quot; &amp; &quot;, &quot;,null ) &amp;
&quot;Allied Health Assistant Level 2, &quot; &amp;
IF ( INCLUDES ( Therapy_Support_WA__c , &quot;Other Therapy $193.99&quot; ), &quot;Other Therapy&quot;,null )),


(IF ( INCLUDES ( Therapy_Support__c , &quot;Occupational Therapy&quot; ), &quot;Occupational Therapy&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Speech Pathology&quot; ), &quot;Speech Pathology&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Physiotherapy&quot; ), &quot;Physiotherapy&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Exercise Physiology&quot; ), &quot;Exercise Physiology&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Behavioral Support Standard&quot; ), &quot;Behavioral Support Standard&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Behavioral Support Specialist&quot; ), &quot;Behavioral Support Specialist&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Psychology&quot; ), &quot;Psychology&quot; &amp; &quot;, &quot;,null ) &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Allied Health Assistant Level 1&quot; ), &quot;Allied Health Assistant Level 1&quot; &amp; &quot;, &quot;,null ) &amp;
&quot;Allied Health Assistant Level 2, &quot; &amp;
IF ( INCLUDES ( Therapy_Support__c , &quot;Other Therapy $193.99&quot; ), &quot;Other Therapy&quot;,null ))
)</formula>
    <label>Therapy Support Text</label>
    <type>Text</type>
</CustomField>