force-app/main/default/objects/Send_Service_Agreement__c/fields/Therapy_Support_WA__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Support_WA__c</fullName>
    <label>Therapy Support WA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Occupational Therapy $193.99</fullName>
            </value>
            <value>
                <fullName>Speech Pathology $193.99</fullName>
            </value>
            <value>
                <fullName>Physiotherapy $224.62</fullName>
            </value>
            <value>
                <fullName>Exercise Physiology $166.99</fullName>
            </value>
            <value>
                <fullName>Behavioral Support Standard $193.99</fullName>
            </value>
            <value>
                <fullName>Behavioral Support Specialist $234.83</fullName>
            </value>
            <value>
                <fullName>Psychology $234.83</fullName>
            </value>
            <value>
                <fullName>Allied Health Assistant Level 1 $56.16</fullName>
            </value>
            <value>
                <fullName>Allied Health Assistant Level 2 $86.79</fullName>
            </value>
            <value>
                <fullName>Other Therapy $193.99</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>