force-app/main/default/objects/Send_Service_Agreement__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>Speech_Pathology_Hours__c  + AHA_Level_1_Hours__c  + AHA_Level_2_Hours__c  + Behavioral_Support_Hours__c  + Behavioral_Support_Specialist_Hours__c	+ Exercise_Physiology__c  + OT_hours__c   + Physiotherapy_Hours__c  + Psychology_Hours__c + Other_Therapy_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>