force-app/main/default/objects/Send_Service_Agreement__c/recordTypes/Service_Agreement_NSW_VIC_ACT.recordType-meta.xml
<RecordType>
    <fullName>Service_Agreement_NSW_VIC_ACT</fullName>
    <active>true</active>
    <label>Service Agreement NSW/VIC/ACT</label>
</RecordType>